p6debuglog.txt
gcc -g p6final.c
p6final.c: In function ‘str_reverse’:
p6final.c:10:10: error: ‘s’ undeclared (first use in this function)
   while (s[count] != '\0')
          ^
 
 gcc -g p5final.c
 ./a.out
enter the number
16
enter the number
14
hcf of 16 and 14 id 2 
 ./a.out
enter the number
12
enter the number
16
hcf of 12 and 16 id 4 
 gdb a.out
GNU gdb (Ubuntu 8.1.1-0ubuntu1) 8.1.1
Copyright (C) 2018 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "x86_64-linux-gnu".
Type "show configuration" for configuration details.
 
 gcc -g p5final.c
 ./a.out
enter the number
3
enter the number
6
hcf of 3 and 6 id 3 
 gdb a.out
GNU gdb (Ubuntu 8.1.1-0ubuntu1) 8.1.1
Copyright (C) 2018 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "x86_64-linux-gnu".
Type "show configuration" for configuration details.
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>.
Find the GDB manual and other documentation resources online at:
<http://www.gnu.org/software/gdb/documentation/>.
For help, type "help".
Type "apropos word" to search for commands related to "word"...
Reading symbols from a.out...done.
(gdb) b main
Breakpoint 1 at 0x842: file p5final.c, line 26.
(gdb) r
Starting program: /home/runner/IA2-Test1-Session2-2/a.out 
warning: Error disabling address space randomization: Operation not permitted

Breakpoint 1, main () at p5final.c:26
26    a= input();
(gdb) s
input () at p5final.c:3
3   {
(gdb) n
5     printf("enter the number\n");
(gdb) n
enter the number
6     scanf("%d",&n);
(gdb) n
4
7     return n;
(gdb) n
8   }
(gdb) n
main () at p5final.c:27
27    b= input();
(gdb) s
input () at p5final.c:3
3   {
(gdb) n
5     printf("enter the number\n");
(gdb) n 
enter the number
6     scanf("%d",&n);
(gdb) n
6
7     return n;
(gdb) n
8   }
(gdb) n
main () at p5final.c:28
28    hcf= gcd(a,b);
(gdb) s
gcd (a=4, b=6) at p5final.c:11
11    for(int i=1; i <= a && i <= b; ++i)
(gdb) n
14          if(a%i==0 && b%i==0)
(gdb) n
15              gcd = i;
(gdb) n
11    for(int i=1; i <= a && i <= b; ++i)
(gdb) n
14          if(a%i==0 && b%i==0)
(gdb) n
15              gcd = i;
(gdb) n
11    for(int i=1; i <= a && i <= b; ++i)
(gdb) n
14          if(a%i==0 && b%i==0)
(gdb) n
11    for(int i=1; i <= a && i <= b; ++i)
(gdb) n
14          if(a%i==0 && b%i==0)
(gdb) n
11    for(int i=1; i <= a && i <= b; ++i)
(gdb) n
17      return gcd;
(gdb) n
 
 
 gcc -g p6final.c
p6final.c: In function ‘str_reverse’:
p6final.c:10:10: error: ‘s’ undeclared (first use in this function)
   while (s[count] != '\0')
          ^
 
 gcc -g p6final.c
 ./a.out
Enter the string:
cse
The reverse of cse is esc
 gdb a.out
GNU gdb (Ubuntu 8.1.1-0ubuntu1) 8.1.1
Copyright (C) 2018 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "x86_64-linux-gnu".
Type "show configuration" for configuration details.
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>.
Find the GDB manual and other documentation resources online at:
<http://www.gnu.org/software/gdb/documentation/>.
For help, type "help".
Type "apropos word" to search for commands related to "word"...
Reading symbols from a.out...done.
(gdb) b main
Breakpoint 1 at 0x85c: file p6final.c, line 29.
(gdb) r
Starting program: /home/runner/IA2-Test1-Session2-2/a.out 
warning: Error disabling address space randomization: Operation not permitted

Breakpoint 1, main () at p6final.c:29
29  {
(gdb) n
31    input_string(str);
(gdb) s
input_string (a=0x7ffd9b8377d4 "\317U") at p6final.c:5
5     printf("Enter the string:\n");
(gdb) n
Enter the string:
6     scanf("%s", a);
(gdb) n
hello
7   }
(gdb) n
main () at p6final.c:33
33    str_reverse(str, rev_str);
(gdb) s
str_reverse (str=0x7ffd9b8377d4 "hello", 
    rev_str=0x7ffd9b8377de "") at p6final.c:12
12    for (n = 0; str[n]; n++);
(gdb) n
13    n--;
(gdb) n
15    for (i = 0; str[i]; i++)
(gdb) n
17      rev_str[i] = str[n];
(gdb) n
18      n--;
(gdb) n
15    for (i = 0; str[i]; i++)
(gdb) n
17      rev_str[i] = str[n];
(gdb) 
18      n--;
(gdb) nn
Undefined command: "nn".  Try "help".
(gdb) n
15    for (i = 0; str[i]; i++)
(gdb) n
17      rev_str[i] = str[n];
(gdb) n
18      n--;
(gdb) n
15    for (i = 0; str[i]; i++)
(gdb) n
17      rev_str[i] = str[n];
(gdb) n
18      n--;
(gdb) n
15    for (i = 0; str[i]; i++)
(gdb) n
17      rev_str[i] = str[n];
(gdb) n
18      n--;
(gdb) n
15    for (i = 0; str[i]; i++)
(gdb) n
20    rev_str[i] = '\0';
(gdb) n
21  }
(gdb) n
main () at p6final.c:34
34    output(str, rev_str);
(gdb) s
output (a=0x7ffd9b8377d4 "hello", 
    reverse_a=0x7ffd9b8377de "olleh") at p6final.c:25
25    printf("The reverse of %s is %s\n", a, reverse_a);
(gdb) n
The reverse of hello is olleh
26  }
(gdb) n
main () at p6final.c:35
35    return 0;
(gdb) n
36  }
(gdb) n
__libc_start_main (main=0x55cfa4e00854 <main>, argc=1, 
    argv=0x7ffd9b8378d8, init=<optimized out>, 
    fini=<optimized out>, rtld_fini=<optimized out>, 
    stack_end=0x7ffd9b8378c8) at ../csu/libc-start.c:344
344 ../csu/libc-start.c: No such file or directory.
(gdb) q
A debugging session is active.

    Inferior 1 [process 68] will be killed.

Quit anyway? (y or n) y
 